# vala-learning

./: .gitignore  config_test.ini  meson.build
apps/001/: clipboard.vala  entry_completion.vala  first_app.vala  listView.vala  sinc_widget.vala  source_code.vala  up_customer_list.vala  vala_script.vala
apps/002/: 001-checklist.vala  002-validateEmail.vala  003-make_password.vala  004-make_password_seed.vala  005_event_loop.vala  006-key_file.vala  007-jsonl.vala  008-parsejson.vala  009-priority-task.vala
language_and_syntax/: polimor.vala  varargs.vala
